# farr.ai

./: .gitignore  Pipfile  README.md  pelicanconf.py  publish.py  publish.sample.py  publishconf.py  pyproject.toml  requirements.txt
content/: 162.md  169.md  2016-09-03-return-on-investment.md  2017-01-25-be-observant.md  2017-02-12-fooled-by-randomness.md  2017-11-21-intro-to-descriptive-statistics.md  2017-12-27-game-playing-agent-a-tale-of-significance-testing.md  2018-02-21-measuring-and-managing-information-risk.md  2018-03-07-the-checklist-manifesto-how-to-get-things-right.md  2018-03-09-dont-make-me-think-revisited.md  2018-09-21-data-scientist-milestone-checkpoint.md  2018-10-07-defining-artificial-intelligence.md  2019-02-12-pelican-static-site.md  2019-02-17-so-good-they-cant-ignore-you.md  2020-01-01-vs-code-python-setup.md  2020-01-26-pymc3-theano-windows-10.md  2020-10-20-data-pipeline-for-data-scientists-intro.md  2020-10-20-data-pipeline-for-data-scientists-part1.md  251.md  303.md  305.md  307.md
content/pages/: aboutme.md  engineering_guide.md  homepage.md  notes.md  readings.md
output/: .pyftpsync-meta.json  archives.html  authors.html  categories.html  defining-artificial-intelligence.html  index.html  static-one-point-oh.html  tags.html
output/author/: .pyftpsync-meta.json  kenneth-r-farr-iii.html
output/category/: .pyftpsync-meta.json  blog.html
output/pages/: .pyftpsync-meta.json  about-me.html
output/tag/: .pyftpsync-meta.json  artificial-intelligence.html  business.html  presentation.html  software-engineering.html
