[tool.poetry]
name = "farr.ai"
version = "0.1.0"
description = "The source for farr.ai"
authors = ["Ken Farr"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2.0"
markdown = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
