[tool.poetry]
name = "farr.ai"
version = "0.1.0"
description = "The source for farr.ai"
authors = ["Ken Farr"]

[tool.poetry.dependencies]
python = "^3.9"
markdown = "^3.1.1"
typogrify = "^2.0.7"
pelican = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
